<resources>
    <string name="app_name">Quran Radio (Gold)</string>
    <string name="app_name_inside">Quran Radio</string>
    <string name="quran_radio_icon_des">Quran Radio Icon</string>
    <string name="radio_stations">Radio Stations</string>
    <string name="favourites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="v1_0_from" translatable="false">v2.1 From</string>
    <string name="abdoroid" translatable="false">ABDOROID</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings_ok">OK</string>
    <string name="settings_cancel">Cancel</string>
    <string name="stream_time">Streaming time</string>
    <string name="hours_hh" translatable="false">hh</string>
    <string name="colon" translatable="false">:</string>
    <string name="minutes_mm" translatable="false">mm</string>
    <string name="forever">Forever</string>
    <string name="custom">Custom</string>
    <string name="toolbar_image_des">toolbar image</string>
    <string name="recordings">Recordings</string>
    <string name="no_internet">There is no Internet Connection now, Please connect to the Internet first Or</string>
    <string name="go_to_recordings"><u>go to recordings</u></string>
    <string name="go_to_stations"><u>go to stations</u></string>
    <string name="no_recordings">There is no recordings right now, please record something first</string>
    <string name="no_fav">There is no favorites right now please add favorites first or</string>
    <string name="remove_icon">remove icon</string>
    <string name="player_image_des">Player Image</string>
    <string name="previous_button">previous button</string>
    <string name="play_button">play button</string>
    <string name="next_button">next button</string>
    <string name="record_button">record button</string>
    <string name="seek_backward_btn">seek backward</string>
    <string name="seek_forward_btn">seek forward</string>
    <string name="alert_dialog">Delete entry</string>
    <string name="alert_msg">Are you sure you want to delete this entry?</string>
    <string name="record_animation">Record animation</string>
    <string name="splash_icon">splash icon</string>
    <string name="main_background">main background</string>
    <string name="change_time">Change streaming time via settings</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">Français</string>
    <string name="german" translatable="false">German</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="indonesian" translatable="false">Bahasa Indonesia</string>
    <string name="portuguese" translatable="false">Português</string>
    <string name="russian" translatable="false">Pусский</string>
    <string name="swahili" translatable="false">Kiswahili</string>
    <string name="turkish" translatable="false">Türkçe</string>
    <string name="chinese" translatable="false">中文</string>
    <string name="search_title" translatable="false">Search</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-7820301890422502~5190573738</string>
    <string name="ad_banner_id" translatable="false">ca-app-pub-7820301890422502/1571533556</string>
    <string name="ad_interstitial_id" translatable="false">ca-app-pub-7820301890422502/5555010599</string>
    <string name="reciters_cat">Reciters_2</string>
    <string name="general_cat">General Radio</string>
    <string name="world_cat">World Stations</string>
    <string name="qiraat_cat">Qiraat</string>
    <string name="reciters_des">Listen to reciters stations</string>
    <string name="general_des">Listen to general stations</string>
    <string name="world_des">Listen to world stations</string>
    <string name="qiraat_des">Listen to reciters stations with qiraat</string>
    <string name="translation_cat">Translation</string>
    <string name="translation_des">Listen to the Quran with several translations</string>
    <string name="reciters1_cat">Reciters_1</string>
</resources>